--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html>
 <head>
 	<title>Meet Chitrank Mishra</title>
-	
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/head_anim.css">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 	<link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
+<!-- 	<script type="text/javascript" src="bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>-->
+
+
 </head>
-<body>
-this is my site
+<body onload="">
+
+<div class="col-sm-12" id="col-sm-12">
+	<div id="head-div1" class="col-sm-12">
+		<div class="img-max img-floater" id ="img-floater-1"><img src="images/head2.png" class="img-fluid"></div>
+		<div class="img-max img-floater" id ="img-floater-2"><img src="images/head2.png" class="img-fluid"></div>
+		<div class="img-max img-floater" id ="img-floater-3"><img src="images/head2.png" class="img-fluid"></div>
+	</div>
+
+</div>
+	<div id="head-div3">This is Chitrank Mishra again</div>
+
+
+
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+
+
+
+
+
+
+
+<!--                        Script Area                                -->
+
+
+
+
+ 	<script src="scripts/head_anim.js"></script>
 </body>
 </html>
