--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
 	<title>Meet Chitrank Mishra</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/head_anim.css">
+	<link rel="stylesheet" type="text/css" href="css/global.css">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
  	<link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
 <!-- 	<script type="text/javascript" src="bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>-->
 
 
 </head>
-<body onload="">
+<body class="body">
 
-<div class="col-sm-12" id="col-sm-12">
+<div class="col-sm-12" id="head-section">
 	<div id="head-div1" class="col-sm-12">
 		<div class="img-max img-floater" id ="img-floater-1"><img src="images/head2.png" class="img-fluid"></div>
 		<div class="img-max img-floater" id ="img-floater-2"><img src="images/head2.png" class="img-fluid"></div>
 		<div class="img-max img-floater" id ="img-floater-3"><img src="images/head2.png" class="img-fluid"></div>
 	</div>
-
+	<div id="head-div2" class="col-sm-12">
+		<h1 id="name">Chitrank Mishra</h1>
+	</div>
 </div>
 	<div id="head-div3">This is Chitrank Mishra again</div>
 
@@ -34,7 +37,7 @@
 <br><br><br><br>
 <br><br><br><br>
 
-
+<div class="div3" >i am the father of 3 children</div>
 
 
 
