--- a/Waste/waste.html
+++ b/Waste/waste.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+	body{
+		background-color: black;
+	}
+</style>
+
+
 
 <div id="demo">Click the button to change the color of this paragraph.</div>
 
