--- a/index.html
+++ b/index.html
@@ -5,41 +5,93 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/head_anim.css">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
+	<link rel="stylesheet" type="text/css" href="css/info-div.css">
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
  	<link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
 <!-- 	<script type="text/javascript" src="bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>-->
 
 
 </head>
-<body class="body">
-
-<div class="col-sm-12" id="head-section">
-	<div id="head-div1" class="col-sm-12">
-		<div class="img-max img-floater" id ="img-floater-1"><img src="images/head2.png" class="img-fluid"></div>
-		<div class="img-max img-floater" id ="img-floater-2"><img src="images/head2.png" class="img-fluid"></div>
-		<div class="img-max img-floater" id ="img-floater-3"><img src="images/head2.png" class="img-fluid"></div>
+<body class="body" >
+<div class="row">
+	<div class="col-sm-12" id="head-section">
+		<div id="head-div1" class="col-sm-12">
+			<div class="img-max img-floater" id ="img-floater-1"><img src="images/head2.png" class="img-fluid"></div>
+			<div class="img-max img-floater" id ="img-floater-2"><img src="images/head2.png" class="img-fluid"></div>
+			<div class="img-max img-floater" id ="img-floater-3"><img src="images/head2.png" class="img-fluid"></div>
+		</div>
+		<div id="head-div2" class="col-sm-12">
+			<h1 id="name">Chitrank Mishra</h1>
+		</div>
 	</div>
-	<div id="head-div2" class="col-sm-12">
-		<h1 id="name">Chitrank Mishra</h1>
+</div>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<div class="row">
+	<div class="col-sm-12" id="info-div">
+	 	<div class="col-sm-6" id="info">
+	 		Sophomore, Tech Enthusiast...
+	 	</div>
+	 	<div class="col-sm-6" id="display_pic">
+	 		<img src="images/display_pic_2.png" class="img-fluid" id="pic">
+
+	 	</div>
+
 	</div>
 </div>
 
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
 
-	<div id="head-div3">This is Chitrank Mishra again</div>
-
-
-
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-
-<div class="div3" >i am the father of 3 children</div>
+<div>this is is is</div>
 
 
 
@@ -51,5 +103,6 @@
 
 
  	<script src="scripts/head_anim.js"></script>
+ 	<script src="scripts/info-div.js"></script>
 </body>
 </html>
