--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 		</div>
 	</div>
 </div>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
+<br><br><br><br> <br><br><br><br> <br><br><br><br>
 <div class="row">
 	<div class="col-sm-12" id="info-div">
 	 	<div class="col-sm-6" id="info">
-	 		Sophomore, Tech Enthusiast...
+	 		Jr. Year, Tech Enthusiast...
 	 	</div>
 	 	<div class="col-sm-6" id="display_pic">
 	 		<img src="images/display_pic_2.png" class="img-fluid" id="pic">
@@ -41,13 +39,19 @@
 	</div>
 </div>
 
+<br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
+<br><br><br><br><br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
+<br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br>
 <br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br>
+<br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br><br><br><br><br>
 <br><br><br><br>
@@ -73,31 +77,15 @@
 <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br><br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
-<br><br><br><br>
 <br><br><br><br>
 
-<div>this is is is</div>
+<div>This is is is</div>
 
 
 
 
 
-<!--                        Script Area                                -->
+<!--                        Script Area/Region                                -->
 
 
 
